--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "^5.20.1",
     "next": "14.2.5",
+    "nobox-client": "^1.12.12",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.8"
