--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nobox-client": "^1.12.12",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^4.0.0",
     "sass": "^1.77.8"
   },
   "devDependencies": {
