--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "^5.20.1",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.1",
     "next": "14.2.5",
     "nobox-client": "^1.12.12",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "resend": "^4.0.0",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "typescript": "^5"
