--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "^5.20.1",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.1",
     "next": "14.2.5",
     "nobox-client": "^1.12.12",
+    "postcss": "^8.5.6",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
     "resend": "^4.0.0",
     "sass": "^1.77.8",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
@@ -31,6 +37,7 @@
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "tailwind-scrollbar": "^4.0.2",
     "typescript": "^5"
   }
 }
