--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
+    "@rcffuta/ict-lib": "workspace:*",
     "antd": "^5.20.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.1",
+    "lucide-react": "^0.511.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "next": "14.2.5",
     "nobox-client": "^1.12.12",
     "postcss": "^8.5.6",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.61.1",
+    "react-hot-toast": "^2.5.2",
     "react-slick": "^0.30.2",
     "resend": "^4.0.0",
     "sass": "^1.77.8",
@@ -27,10 +33,11 @@
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^20",
+    "@types/node": "^20.19.9",
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
@@ -38,6 +45,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "tailwind-scrollbar": "^4.0.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^3.25.76"
   }
 }
