--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
-    "@rcffuta/ict-lib": "3.1.0",
+    "@rcffuta/ict-lib": "workspace:*",
     "antd": "^5.20.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
+    "cloudinary": "^2.7.0",
+    "cloudinary-build-url": "^0.2.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.11.1",
     "lucide-react": "^0.511.0",
     "mobx": "^6.13.7",
